# harness-writing

./: .env.example  .gitignore  AGENT.md  README.md  package.json  pyproject.toml  todo.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  settings.py
apps/api/app/agents/: __init__.py  base.py  editor.py  mock_llm.py  planner.py  researcher.py  reviewer.py  verifier.py  writer.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: __init__.py  assembly.py  drafts.py  evidence.py  interactions.py  papers.py  planning.py  prompts.py  reviews.py  sections.py  workflows.py  writing_harness.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/models/: __init__.py  approval.py  assembly.py  base.py  contract.py  draft.py  enums.py  evidence.py  interaction.py  outline.py  paper.py  planning.py  prompts.py  review.py  revision.py  style.py  workflow.py  writing_harness.py
apps/api/app/schemas/: __init__.py  approvals.py  assembly.py  common.py  contracts.py  drafts.py  evidence.py  interactions.py  latex_import.py  outlines.py  papers.py  planning.py  prompts.py  reviews.py  revisions.py  style_guides.py  workflows.py  writing_harness.py
apps/api/app/services/: __init__.py  assembly.py  base.py  contracts.py  crud.py  drafting.py  evidence.py  interaction_state.py  latex_import.py  outlines.py  papers.py  prompt_assembly.py  prompt_logging.py  researcher.py  review.py  section_actions.py  section_approvals.py  verification.py  workflows.py  writing_harness.py
apps/api/app/services/editor/: __init__.py  export_generator.py  manuscript_assembler.py  manuscript_reviewer.py
apps/api/app/services/evaluation/: __init__.py  academic.py
apps/api/app/state_machine/: __init__.py  transitions.py
apps/api/tests/: conftest.py  test_academic_evaluation.py  test_assembly_export.py  test_crud.py  test_drafting_review_revision.py  test_end_to_end_smoke.py  test_evidence_pipeline.py  test_generation.py  test_interactions.py  test_latex_import.py  test_llm_providers.py  test_planning.py  test_prompt_assembly.py  test_schema_creation.py  test_section_approvals.py  test_state_machine.py  test_workflows.py  test_writing_harness.py
apps/worker/: .env.example  README.md  pyproject.toml
apps/worker/tests/: test_scaffold.py
apps/worker/worker/: __init__.py  queue.py  worker.py
(+76 files in other folders)
