[project]
name = "paper-harness-worker"
version = "0.1.0"
description = "Worker scaffold for Paper Harness."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
